Fix alignment of post-format icon on single pages

--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -82,6 +82,10 @@
 	}
 }
 
+.entry-header {
+	position: relative;
+}
+
 .entry-meta {
 	font-family: $alt-font;
 	@include font-size( $alt-size );
